<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/ivUserAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="Avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_santo_tomas" />

    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProgressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_progreso"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvHomeTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/pbTaskProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progress="65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProgressLabel" />

    <LinearLayout
        android:id="@+id/llMenuButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/pbTaskProgress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnGoToAddTaskMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ingresar_tarea" />

        <Button
            android:id="@+id/btnLogout"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/btn_cerrar_sesion" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tlStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llMenuButtons" />

    <TableLayout
        android:id="@+id/tlStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>
            <TextView
                android:text="@string/txt_total"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txt_pendientes"
                android:textAlignment="center"
                android:textStyle="bold" />
            <TextView
                android:text="@string/txt_realizadas"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/tvTotalCount"
                android:text="0"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tvPendingCount"
                android:text="0"
                android:textAlignment="center" />
            <TextView
                android:id="@+id/tvDoneCount"
                android:text="0"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/btn_nueva_tarea"
        app:layout_constraintBottom_toTopOf="@id/tlStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>